# django-task-application

./: .gitignore  README.md  docker-compose.yml  learning.md  main.py  pyproject.toml  readme.md  requirements.txt  system-design  tasks.json  users.json
task_app/: middleware.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
task_app/application_app/: apps.py  models.py  serializers.py  urls.py  views.py
task_app/application_app/migrations/: 0001_initial.py  0002_application_is_deleted.py
task_app/calculator/: urls.py  views.py
task_app/job_app/: apps.py  models.py  serializers.py  urls.py  views.py
task_app/job_app/migrations/: 0001_initial.py  0002_alter_job_table.py
task_app/migrations/: 0001_initial.py  0002_alter_task_table_alter_user_table.py
